# severstal-demo

./: Dockerfile  Makefile  README.md  clustering_model.py  doc_2025-10-11_12-41-33.dockerignore  docker-compose.yml  faiss_indexing.py  influence_signs.py  main.py  preprocessing.py  pyproject.toml
notebook/: Untitled.ipynb  data.csv  data_xls.xlsx  data_xls_with_data.xls
