[project]
name = "severstal-yp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faiss-cpu>=1.7.4",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0,<2.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "phik>=0.12.4",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.12.0",
    "streamlit>=1.24.1",
    "xlrd>=2.0.2",
]
